compiler/testData/diagnostics/tests/sealed/NeverOpen.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
<!INCOMPATIBLE_MODIFIERS!>open<!> <!INCOMPATIBLE_MODIFIERS!>sealed<!> class Base {

}